Fixed error where google font was not showing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Noto Serif', serif;
+    
 }
 
 body {
